updated functionality for stats to reduce route numbers
