# src/routes/statsRoutes.ts
@@ -1,15 +1,28 @@
 /**
  * Routes for getting quick aggrigations and stats
  */
-import { getGenreStats } from '@/controller/statsRoutesController';
+import { getGenreStats, getNetworkStats } from '@/controller/statsRoutesController';
 import { Router } from 'express';
 
 const statsRoutes = Router();
 
 statsRoutes.get('/genres', async(request, response) => {
     try {
-        console.log('Received request for genre stats');
         const result = await getGenreStats();
+        
+        return response.json(result);
+        
+    } catch (error) {
+        return response.status(500).json({
+            error: 'Internal server error: ' + error
+        });
+    }
+});
+
+statsRoutes.get('/networks', async(request, response) => {
+    try {
+
+        const result = await getNetworkStats();
         
         return response.json(result);
         
